# crm-agent-with-supabse

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
db/: generate_data_tables.py  migration-create-tables.sql
db/data/: customers.csv  items.csv  rfm.csv  transactions.csv
frontend/: chat_local.py
src/ralph/: graph.py  prompts.py
src/ralph/my_mcp/: config.py  mcp_config.json
src/ralph/my_mcp/servers/: marketing_server.py
